--- a/challenge_3/package.json
+++ b/challenge_3/package.json
@@ -16,9 +16,11 @@
     "axios": "^0.23.0",
     "express": "^4.17.1",
     "mongoose": "^6.0.12",
+    "mysql2": "^2.3.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
-    "react-router-dom": "^5.3.0"
+    "react-router-dom": "^5.3.0",
+    "sequelize": "^6.7.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.15.7",
